# awu-launcher

./: .gitignore  CMakeLists.txt  README.md  addGame.cpp  addGame.h  appedit.cpp  appedit.h  fetch.py  main.cpp  project.pro  readme
include/: app_edit.h  main_window.h  utils.h
src/: CMakeCache.txt  app_edit.cpp  cmake_install.cmake  main.cpp  main_window.cpp  utils.cpp
src/awu_autogen/: deps  mocs_compilation.cpp
src/awu_autogen/6YEA5652QU/: moc_app_edit.cpp.d  moc_main_window.cpp.d
